Bug 23650 - rust field name access error mentions "foo"
Summary: rust field name access error mentions "foo"
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: rust (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 8.2.1
Assignee: Tom Tromey
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-13 16:53 UTC by Tom Tromey
Modified: 2018-09-13 17:18 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Tromey 2018-09-13 16:53:32 UTC
This is in rust-lang.c:

		error (_("Attempting to access named field foo of tuple "

This should mention the field name, not "foo".
Comment 1 Sourceware Commits 2018-09-13 17:03:05 UTC
The master branch has been updated by Tom Tromey <tromey@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=4a3fe98f885a2d1db804584e7ea265ab3ccef4d7

commit 4a3fe98f885a2d1db804584e7ea265ab3ccef4d7
Author: Tom Tromey <tom@tromey.com>
Date:   Thu Sep 13 10:56:34 2018 -0600

    Make Rust error message mention the field name
    
    I noticed a spot in rust-lang.c where the placeholder "foo" was used
    instead of the actual field name.  This patch fixes the bug.
    
    gdb/ChangeLog
    2018-09-13  Tom Tromey  <tom@tromey.com>
    
    	PR rust/23650:
    	* rust-lang.c (rust_evaluate_subexp): Use field name, not "foo".
    
    gdb/testsuite/ChangeLog
    2018-09-13  Tom Tromey  <tom@tromey.com>
    
    	PR rust/23650:
    	* gdb.rust/simple.exp: Add test for enum field access error.
Comment 2 Sourceware Commits 2018-09-13 17:09:48 UTC
The gdb-8.2-branch branch has been updated by Tom Tromey <tromey@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=fde24e1a534b7df3edd0fc167d0ace7d240021f8

commit fde24e1a534b7df3edd0fc167d0ace7d240021f8
Author: Tom Tromey <tom@tromey.com>
Date:   Thu Sep 13 10:56:34 2018 -0600

    Make Rust error message mention the field name
    
    I noticed a spot in rust-lang.c where the placeholder "foo" was used
    instead of the actual field name.  This patch fixes the bug.
    
    2018-09-13  Tom Tromey  <tom@tromey.com>
    
    	PR rust/23650:
    	* rust-lang.c (rust_evaluate_subexp): Use field name, not "foo".
    
    gdb/testsuite/ChangeLog
    2018-09-13  Tom Tromey  <tom@tromey.com>
    
    	PR rust/23650:
    	* gdb.rust/simple.exp: Add test for enum field access error.
Comment 3 Tom Tromey 2018-09-13 17:18:14 UTC
Fixed.